fix: make application mobile friendly

--- a/src/components/cart-dropdown/CartDropdown.styles.scss
+++ b/src/components/cart-dropdown/CartDropdown.styles.scss
@@ -11,6 +11,10 @@
   right: 40px;
   z-index: 5;
 
+  @media screen and (max-width: 800px) {
+    right: 10px;
+  }
+
   .empty-message {
     font-size: 18px;
     margin: 50px auto;
