--- a/src/components/product-card/ProductCard.styles.scss
+++ b/src/components/product-card/ProductCard.styles.scss
@@ -6,6 +6,10 @@
   align-items: center;
   position: relative;
 
+  // @media screen and (max-width: 800px) {
+  //   width: 40vw;
+  // }
+
   img {
     width: 100%;
     height: 95%;
@@ -19,16 +23,31 @@
     position: absolute;
     top: 255px;
     display: none;
+
+    @media screen and (max-width: 800px) {
+      display: block;
+      opacity: 0.9;
+      // min-width: unset;
+      padding: 0 10px;
+    }
   }
 
   &:hover {
     img {
       opacity: 0.8;
+
+      @media screen and (max-width: 800px) {
+        opacity: unset;
+      }
     }
 
     button {
       opacity: 0.85;
       display: flex;
+
+      @media screen and (max-width: 800px) {
+        opacity: unset;
+      }
     }
   }
 
