--- a/src/index.scss
+++ b/src/index.scss
@@ -10,6 +10,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   padding: 20px 40px;
+
+  @media screen and (max-width: 800px) {
+    padding: 10px;
+  }
 }
 
 code {
