--- a/src/routes/category/Category.styles.scss
+++ b/src/routes/category/Category.styles.scss
@@ -3,6 +3,10 @@
   grid-template-columns: repeat(4, 1fr);
   column-gap: 20px;
   row-gap: 50px;
+
+  @media screen and (max-width: 800px) {
+    grid-template-columns: 1fr 1fr;
+  }
 }
 .category-title {
   font-size: 38px;
